# shadow_market

./: .coverage  Shadow Market Deployment Guide.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  shadowmarket-backend.service.toml  shadowmarket-frontend.service.toml  shadowmarket.nginx  torrc.toml
Deprecated/: Serial.py  bitcoin_service.py  test_escrow_service.py
Deprecated/ledger/: apps.py  models.py  services.py  tasks.py
backend/: .env  Developer Command Prompt for VS 2022.lnk  Dockerfile.dockerfile  Shadowkeys.env.env Template for Shadow Market Backen  backend.env.toml  bandit_report.json  conftest.py  global_requirements.txt  manage.py  pytest.ini  requirements.txt  test_ctypes_load.py  test_ssl_load.py  vault_integration.py
backend/adminpanel/: apps.py  forms.py  (+2 more)
frontend/: .babelrc  .env.test  Dockerfile.dockerfile  babel.config.js  babel.js  jest.config  jest.config.js  jest.setup.js  middleware.html  next.config.js  nginx.conf  package-lock.json  package.json  tsconfig.json
kubernetes/: backend-deployment.yml  backend-service.yml  celery-beat-deployment.yml  celery-worker-deployment.yml  configmap.yml  frontend-deployment.yml  frontend-service.yml  ingress.yml  namespace.yml  networkpolicy-allow-backend-egress.yml  networkpolicy-allow-backend-ingress.yml  networkpolicy-allow-dns.yml  networkpolicy-allow-frontend-egress.yml  networkpolicy-allow-frontend-ingress.yml  networkpolicy-default-deny.yml  postgres-service.yml  postgres-statefulset.yml  redis-deployment.yml  redis-service.yml  secrets.yml
ledger/: exceptions.py  models.py
(+338 files in other folders)
